--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,14 +14,10 @@ body {
   background-color: $bg;
 }
 
-.grad-box {
+.nav {
   @extend .grad-1;
   color: $white;
   display: flex;
-}
-
-.nav {
-  @extend .grad-box;
   align-items: center;
   justify-content: space-between;
   position: fixed;
@@ -57,16 +53,35 @@ body {
 }
 
 .hero {
-  @extend .grad-box;
-  margin-top: 60px;
-  height: 400px;
+  @extend .grad-1;
+  color: $white;
+  display: flex;
+  height: 500px;
   position: absolute;
   width: 100vw;
   z-index: -1;
 }
 
-.words {
-  width: 600px;
+.grid {
+  display: grid;
+  padding-top: 60px;
+  grid-template-columns: repeat(8, 1fr);
+  grid-auto-rows: 100px;
+  grid-gap: 1rem;
+  padding: 120px 1rem;
+}
+
+.card {
+  background-color: $white;
+  border-radius: 4px;
+  color: $dark;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+}
+
+.intro {
+  grid-column: 2/4;
+  grid-row: span 2;
   text-align: justify;
   color: $white;
   .bio {
@@ -81,19 +96,25 @@ body {
         border-width: 3px;
       }
     }
+    @media (max-width: 700px) {
+      font-size: 1.1rem;
+    }
+  }
+  @media (max-width: 960px) {
+    grid-column: 1/4;
+  }
+  @media (max-width: 700px) {
+    grid-column: span 8;
   }
 }
 
-.content {
-  padding-top: 60px;
-  display: flex;
-  flex-direction: column;
-}
-
-.card {
-  background-color: $white;
-  border-radius: 4px;
-  color: $dark;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-  padding: 2rem;
+.terminal {
+  grid-column: 5/8;
+  grid-row: span 4;
+  @media (max-width: 960px) {
+    grid-column: 5/9;
+  }
+  @media (max-width: 700px) {
+    grid-column: span 8;
+  }
 }
