made a terminal thingy

--- a/src/style/_type.scss
+++ b/src/style/_type.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
 
 $thin: 300;
 $regular: 400;
@@ -7,4 +8,10 @@ $thicc: 700;
 .t-h1 {
   font-size: 2rem;
   font-weight: $thicc;
+}
+
+.t-mono {
+  font-size: 14px;
+  font-weight: $thicc;
+  font-family: 'IBM Plex Mono', monospace;
 }
