--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -12,6 +12,7 @@ body {
   font-family: 'Oxygen', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   background-color: $bg;
+  overflow-x: hidden;
 }
 
 .nav {
@@ -64,7 +65,6 @@ body {
 
 .grid {
   display: grid;
-  padding-top: 60px;
   grid-template-columns: repeat(8, 1fr);
   grid-auto-rows: 100px;
   grid-gap: 1rem;
@@ -109,8 +109,55 @@ body {
 }
 
 .terminal {
+  @extend .card;
   grid-column: 5/8;
   grid-row: span 4;
+  position: relative;
+  padding-top: 3rem;
+  width: calc(100% - 4rem);
+  overflow-y: auto;
+  .dot {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    top: 8px;
+  }
+  .dot-1 {
+    @extend .dot;
+    left: 10px;
+    background-color: #e74c3c;
+  }
+  .dot-2 {
+    @extend .dot;
+    left: 32px;
+    background-color: #f1c40f;
+  }
+  .dot-3 {
+    @extend .dot;
+    left: 54px;
+    background-color: #2ecc71;
+  }
+  .prompt {
+    color: #4a00e0;
+    font-weight: $thicc;
+    width: 10rem;
+    white-space: nowrap;
+    padding-right: 0.5rem;
+  }
+  input {
+    @extend .t-mono;
+    background: none;
+    border: none;
+    margin-bottom: 1rem;
+    width: 100%;
+    color: $dark;
+  }
+  pre {
+    white-space: pre-line;
+    word-wrap: break-word;
+    text-align: justify;
+  }
   @media (max-width: 960px) {
     grid-column: 5/9;
   }
