--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -62,12 +62,11 @@ body {
   @extend .grad-1;
   color: $white;
   display: flex;
-  height: 550px;
+  height: 500px;
   position: absolute;
-  width: calc(100vw + 50px);
+  width: calc(100vw);
   z-index: -1;
-  transform: rotate(-5deg) translateX(-50px);
-  transform-origin: 0 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
 }
 
 .grid {
@@ -82,10 +81,9 @@ body {
 
 .card {
   background-color: $white;
-  border-radius: 4px;
+  border-radius: 6px;
   color: $dark;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-  padding: 2rem;
 }
 
 .intro {
@@ -131,7 +129,7 @@ body {
   .text-container {
     height: calc(100% - 2rem);
     padding: 1rem;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   .whoami {
     word-break: normal;
@@ -170,7 +168,7 @@ body {
   }
   .prompt {
     color: $primary;
-    font-weight: $thicc;
+    font-weight: $regular;
     width: 10rem;
     white-space: pre;
     padding-right: 0.5rem;
@@ -200,7 +198,75 @@ body {
   }
 }
 
-.placeholder {
-  grid-row: span 1;
+.section-head {
+  margin: 1rem;
+  grid-row: 6/9;
   grid-column: span 12;
+  color: $purp;
+  .title {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 36px;
+    font-weight: $thicc;
+    text-align: center;
+  }
+  .body {
+    color: #525f7f;
+    text-align: center;
+    max-width: 550px;
+    position: relative;
+    a {
+      color: inherit;
+      text-decoration: underline;
+      transition: color 300ms;
+      &:hover {
+        color: $purp;
+      }
+    }
+  }
+  .sep {
+    position: absolute;
+    bottom: -2rem;
+    left: calc(50% - 40px);
+    width: 80px;
+    height: 5px;
+    background-color: $purp;
+  }
+
+  @media (max-width: 615px) {
+    grid-row: 8/11;
+  }
+}
+
+.project-card {
+  margin-bottom: 2.5rem;
+  .title {
+    display: flex;
+    align-items: center;
+    margin: 1rem;
+    margin-left: 1.5rem;
+    font-size: 32px;
+    font-weight: $thicc;
+    color: black;
+    .badge {
+      color: white;
+      font-size: 13px;
+      padding: 0.5rem 1rem;
+      border-radius: 500px;
+      background-color: #2ecc71;
+      margin-left: 1rem;
+    }
+  }
+  .body {
+    margin: 1.5rem;
+  }
+  grid-row: span 4;
+  grid-column: 4/10;
+  @media (max-width: 1000px) {
+    grid-column: 2/12;
+  }
+  @media (max-width: 615px) {
+    grid-row: span 4;
+    grid-column: span 12;
+  }
 }
