--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -20,7 +20,7 @@ body {
   color: $white;
 }
 
-.nav {
+nav {
   @extend .grad-1;
   color: $white;
   display: flex;
@@ -173,6 +173,14 @@ body {
     white-space: pre;
     padding-right: 0.5rem;
   }
+  .cat {
+    width: 50%;
+    height: auto;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
   input {
     @extend .t-mono;
     color: $white;
@@ -238,35 +246,75 @@ body {
   }
 }
 
-.project-card {
+.project-wrapper {
   margin-bottom: 2.5rem;
-  .title {
-    display: flex;
-    align-items: center;
-    margin: 1rem;
-    margin-left: 1.5rem;
-    font-size: 32px;
-    font-weight: $thicc;
-    color: black;
-    .badge {
-      color: white;
-      font-size: 13px;
-      padding: 0.5rem 1rem;
-      border-radius: 500px;
-      background-color: #2ecc71;
-      margin-left: 1rem;
-    }
-  }
-  .body {
-    margin: 1.5rem;
-  }
   grid-row: span 4;
   grid-column: 4/10;
+  position: relative;
   @media (max-width: 1000px) {
     grid-column: 2/12;
   }
   @media (max-width: 615px) {
     grid-row: span 4;
     grid-column: span 12;
+  }
+  .project-tech {
+    width: 100%;
+    height: 5rem;
+    right: 0;
+    top: 10px;
+    background-color: rgba($grey, 0.2);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    overflow: auto;
+    white-space: nowrap;
+    .bubble {
+      display: inline-block;
+      margin: 10px;
+      width: 60px;
+      height: 60px;
+      border-radius: 200px;
+      background-color: white;
+      .img-container {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        svg {
+          width: 50px;
+          height: 50px;
+        }
+      }
+    }
+  }
+  .project-card {
+    width: 100%;
+    height: calc(100% - 5rem);
+    border-bottom-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    .title {
+      display: flex;
+      align-items: center;
+      padding: 1rem;
+      padding-left: 1.5rem;
+      font-size: 22px;
+      font-weight: $thicc;
+      color: $grey;
+      .badge {
+        color: white;
+        font-size: 13px;
+        padding: 0.5rem 1rem;
+        border-radius: 500px;
+        background-color: #2ecc71;
+        margin-left: 1rem;
+      }
+    }
+    .body {
+      margin: 1.5rem;
+      margin-top: 0;
+      color: $grey;
+    }
   }
 }
