--- a/src/style/_type.scss
+++ b/src/style/_type.scss
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans');
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
 
 $thin: 300;
 $regular: 400;
 $thicc: 700;
+
+$ibm: 'IBM Plex Sans';
 
 .t-h1 {
   font-size: 40px;
